_sass/modern-resume-theme.scss
@import "base";
@import "button";
@import "type";
@import "dark";
@import "icons";

.header-right p {
  margin-bottom: 3px;
}

.header-right a{
  color:inherit;
  font-weight:500;
}

@media screen and (max-width: 768px) {
  .header-contianer div{
    text-align: center;
  }

  .header-right p {
    text-align: center;
  }

  .header-left {
    margin-top: 0px;
  }
}

.profile-img {
  width:  200px;
  height: 200px;
  margin: 0 auto;
  margin-bottom: 10px;
  display: block;
  border-radius: 100px;
  background-size: cover;
  background-position: center;
  background-repeat: repeat, no-repeat;
}

.into-text-1 {
  margin-top: 30px;
}

@media only screen and (max-width : 992px) {
  .into-text-1 {
    margin-top: 20px;
  }
}

.projects-container, .experience-container, .education-container {
  h3 {
    margin-bottom: 0;
  }
}

.layout {
  margin-top: 3rem;

  .details {
    text-align: left;

    p {
      margin-bottom: 3px;
      font-size: 1.6rem;
      text-align: inherit;
      font-weight: 300;

      b {
        font-weight: 500;
      }
    }

    @media screen and (max-width: 768px) {
      text-align: center!important;

      p {
        text-align: center!important;
      }
    }

    a {
      color: inherit;
      font-style: italic;
      font-weight: 300;
    }

    .fa {
      font-size: 2rem;
    }

    .link {
      font-size: 1.5rem;
    }

    h4 {
      margin-bottom: 0.1rem;
      font-weight: 500;

      @media print {
        margin-bottom: 0.2rem;
      }

      a {
        font-weight: 500;
      }
    }
  }
}

.layout-right, .layout-top-right {
  .details {
    text-align: right;
  }
}

.layout-right {
  @media screen and (max-width: 768px) {
    display: flex;
    flex-direction: column-reverse;
  }
}

.layout-top-right {
  @media screen and (max-width: 768px) {
    display: flex;
    flex-direction: column;
  }
}

.layout-top-middle {
  .details {
    text-align: center;
  }
}

.footer-container {
  margin-top:100px;
}

.footer-container p {
  text-align: center;
  font-style: italic;
  font-weight: 300;
}

.footer-container a {
  color: inherit;
  font-style: italic;
  font-weight: 300;
}

.page-content {
  padding: 0;
}

.contact a {
  line-height: 50px;
  margin-left: 30px;
  color: #BBBBBB;
  -webkit-transition: color 0.4s ease;
  -moz-transition: color 0.4s ease;
  transition: color 0.4s ease;
}

.contact a:hover {
  color: #4C4C4C;
}

p.quote {
  font-size: 1.4rem;
  font-style: italic;
  padding: 1rem 2.5rem;
  text-align: center;

  @media print {
    text-align: left;
    padding: 0rem 1rem;
    margin-top: 1rem;
  }
}

